projects list spacing and grid fix

--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -1,5 +1,5 @@
-.container {
-  position: relative;
+.projects__list {
+  margin-bottom: 120px;
 }
 
 :host ::ng-deep .shape--triangle svg {
